--- a/voting_assemblies/v1/src/main/resources/application.properties
+++ b/voting_assemblies/v1/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.hibernate.ddl-auto= update
 spring.jpa.open-in-view= true
 spring.jpa.show-sql= false
 spring.jpa.database-platform= org.hibernate.dialect.PostgreSQL9Dialect
+
+spring.jackson.date-format= "yyyy-MM-dd HH:mm:ss.SSS"
