--- a/voting_assemblies/v1/src/main/resources/application.properties
+++ b/voting_assemblies/v1/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port= 7001
 
 ##-- DATABASE CONFIGURATION
 spring.datasource.driver-class-name= org.postgresql.Driver
-spring.datasource.password= admin
+spring.datasource.password= admin123
 spring.datasource.username= admin
-spring.datasource.url= jdbc:postgresql://localhost:8989/voting_assemblies
+spring.datasource.url= jdbc:postgresql://localhost:5432/voting_assemblies
 
 ##-- CONFIG JPA
 spring.jpa.hibernate.ddl-auto= update
