starting unit tests

--- a/voting_assemblies/v1/src/main/resources/application.properties
+++ b/voting_assemblies/v1/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.show-sql= false
 spring.jpa.database-platform= org.hibernate.dialect.PostgreSQL9Dialect
 
 spring.jackson.date-format= "yyyy-MM-dd HH:mm:ss.SSS"
+
+validate.vote = http://localhost:7003/validate/cpfCnpj/
