--- a/voting_assemblies/v1/src/main/resources/application.properties
+++ b/voting_assemblies/v1/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port= 7001
 
 ##-- DATABASE CONFIGURATION
 spring.datasource.driver-class-name= org.postgresql.Driver
-spring.datasource.password= admin123
-spring.datasource.username= admin
-spring.datasource.url= jdbc:postgresql://localhost:5432/voting_assemblies
+spring.datasource.password= ${DB_PASSWORD:admin123}
+spring.datasource.username= ${DB_USERNAME:admin}
+spring.datasource.url= ${DB_PORT_URL:jdbc:postgresql://127.0.0.1:5432/voting_assemblies}
 
 ##-- CONFIG JPA
 spring.jpa.hibernate.ddl-auto= update
@@ -14,5 +14,5 @@ spring.jpa.database-platform= org.hibernate.dialect.PostgreSQL9Dialect
 
 spring.jackson.date-format= "yyyy-MM-dd HH:mm:ss.SSS"
 
-validate.vote = http://localhost:7003/validate/cpfCnpj/
+validate.vote = ${URL_VALIDATE_CPF:http://localhost:7003/validate/cpfCnpj/}
 
